Fix variable name

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ $request = (new Request())
     ->withMethod('GET')
     ->withUri(new Uri('https://api.example.com/'))
     ->withHeader('Accept', 'application/json')
-    ->withBody($stream);
+    ->withBody($body);
         </code></pre>
 
         <aside class="notes">
